# Cowsay

./: pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
cowsay/: admin.py  forms.py  models.py  views.py
cowsay/migrations/: 0001_initial.py  0002_auto_20210211_1942.py  0003_postnew.py  0004_auto_20210212_0159.py  0005_auto_20210212_0310.py
templates/: history.html  index.html
templates/nav/: base.html
