[tool.poetry]
name = "cowsay"
version = "0.1.0"
description = "returns what the cow said"
authors = ["Jonathan Sueck <jonathansueck@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
